#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([FULL-PACKAGE-NAME], [VERSION], [BUG-REPORT-ADDRESS])

m4_include([m4/ax_cxx_compile_stdcxx_11.m4])

# Checks for programs.
AC_PROG_CXX

# Check for C++1 support
AX_CXX_COMPILE_STDCXX_11

# Checks for header files.
AC_CHECK_HEADERS([stdint.h ctype.h])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
